turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:10: error: not found: value dir
      dir = i
      ^Turmite:13: error: not found: value dir
  setCouleurBrosse(colors((dir+1)%(colors.length)))
                           ^